# vaultnote

./: .gitignore  BOOTSTRAP_PROGRESS.md  VaultNote.sln
.github/workflows/: rust.yml
apps/mobile/VaultNote.Mobile/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  AskVaultPage.xaml  AskVaultPage.xaml.cs  CreateNotePage.xaml  CreateNotePage.xaml.cs  GlobalXmlns.cs  GrpcClientService.cs  ListNotesPage.xaml  ListNotesPage.xaml.cs  LoginPage.xaml  LoginPage.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  NoteItem.cs  RegisterPage.xaml  RegisterPage.xaml.cs  SearchNotesPage.xaml  SearchNotesPage.xaml.cs  VaultNote.Mobile.csproj
apps/server/: Cargo.toml  build.rs
apps/server/migrations/: 20260309175809_init_notes.sql  20260309190000_init_documents.sql  20260309200000_users.sql  20260309201000_note_embeddings.sql  20260309202000_document_extracted_text.sql  20260309203000_notes_user_id.sql
apps/server/src/: lib.rs  main.rs
apps/server/tests/: server_tests.rs
infra/: docker-compose.yml
proto/vaultnote/v1/: vaultnote.proto
