[package]
name = "vaultnote-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
config = "0.15.6"
dotenvy = "0.15.7"
moka = { version = "0.12.10", features = ["future"] }
prost = "0.13.4"
prost-types = "0.13.4"
redis = { version = "0.28.2", features = ["tokio-comp"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
tonic = { version = "0.12.3", features = ["transport"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }

[build-dependencies]
prost-build = "0.13.4"
tonic-build = "0.12.3"
